# rpower

./: Cargo.toml  Makefile  README.md
config/: config.toml
config/icons/: icons_source.txt
src/: error.rs  main.rs  menu_button.rs  prelude.rs  rpower.rs
