[package]
name = "rpower"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
home = "0.5.4"
iced = { git = "https://github.com/iced-rs/iced.git", rev = "ef18ecf", features = ["svg", "debug"] }
serde = "1.0.152"
thiserror = "1.0.38"
